--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,2 +1,2 @@
-<link rel="shortcut icon" href="/public/favicon.png" />
-<link rel="icon" type="image/png" href="/public/favicon.png" />
+<link rel="shortcut icon" href="public/favicon.png" />
+<link rel="icon" type="image/png" href="public/favicon.png" />
